Wed May 11 05:32:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm.mpb:
          Fixed problem with last commit

Tue May 10 18:32:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm.mpb:
          Added include paths

        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.cpp:
          Fixed Coverity errors

Tue May 10 12:38:37 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst:
        * examples/Display/Display_Base/Display_Base.idl:
        * examples/Display/descriptors/flattened_deploymentplannat.cdp:
        * examples/Display/descriptors/run_test.pl:
        * examples/Display/NavDisplayGUI_exec/DetailView.h:
        * examples/Display/NavDisplayGUI_exec/RootPanel.cpp:
        * examples/Display/NavDisplayGUI_exec/NodeItem.cpp:
        * examples/Display/NavDisplayGUI_exec/MapView.cpp:
        * examples/Display/NavDisplayGUI_exec/RootPanel.h:
        * examples/Display/NavDisplayGUI_exec/NodeItem.h:
        * examples/Display/NavDisplayGUI_exec/Worker.cpp:
        * examples/Display/NavDisplayGUI_exec/NavDisplayGUI.mpc:
        * examples/Display/NavDisplayGUI_exec/MapView.h:
        * examples/Display/NavDisplayGUI_exec/NavDisplayGUI_exec.cpp:
        * examples/Display/NavDisplayGUI_exec/NavUnit.cpp:
        * examples/Display/NavDisplayGUI_exec/NavDisplayGUI_exec.h:
        * examples/Display/NavDisplayGUI_exec/NavUnit.h:
        * examples/Display/NavDisplayGUI_exec/DetailView.cpp:
        * examples/Display/RateGen/controller.cpp:
        * examples/Display/RateGen/RateGen_exec.cpp:
        * examples/Display/GPS/GPS.idl:
        * examples/Display/GPS/GPS_exec.h:
        * examples/Display/GPS/GPS_exec.cpp:
        * examples/Display/NavDisplay/NavDisplay_exec.cpp:
        * examples/Display/NavDisplay/NavDisplay.idl: