@@ -115,7 +115,7 @@ sub run_node_daemons {
 
         $d_cmd = "$DANCE_ROOT/bin/dance_node_manager";
         $d_param = "-s $node_app -n $nodename=$iorfile -t 30 --domain-nc corbaloc:rir:/NameService";
-  
+
         print "Run dance_node_manager with $d_param\n";
 
         $DEAMONS[$i] = $tg_daemons[$i]->CreateProcess ($d_cmd, $d_param);
